--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
   </ul>
 
   <div class="gallery">
-    <img src="assets/images/gym1.jpg">
-    <img src="assets/images/gym2.jpg">
-    <img src="assets/images/gym3.jpg">
-    <img src="assets/images/gym4.jpg">
-    <img src="assets/images/gym5.jpg">
-    <img src="assets/images/gym6.jpg">
-    <img src="assets/images/gym7.jpg">
-    <img src="assets/images/gym8.jpg">
+    <img src="assets/gym1.jpg">
+    <img src="assets/gym2.jpg">
+    <img src="assets/gym3.jpg">
+    <img src="assets/gym4.jpg">
+    <img src="assets/gym5.jpg">
+    <img src="assets/gym6.jpg">
+    <img src="assets/gym7.jpg">
+    <img src="assets/gym8.jpg">
   </div>
 </section>
 
@@ -175,3 +175,4 @@
 
 </body>
 </html>
+
