--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
   <h3 style="text-align:center;margin-top:30px;">Our Team</h3>
   <div class="team">
     <div class="team-card">
-      <img src="assets/images/trainer2.jpg" alt="Trainer">
-      <p>Shela – Personal Trainer</p>
+      <img src="assets/trainer3.jpg" alt="Trainer">
+      <p>Rizky – Personal Trainer</p>
     </div>
     <div class="team-card">
-      <img src="assets/images/trainer1.jpg" alt="Trainer">
+      <img src="assets/trainer2.jpg" alt="Trainer">
       <p>Sinta – Yoga Instructor</p>
     </div>
     <div class="team-card">
-      <img src="assets/images/trainer3.jpg" alt="Trainer">
-      <p>Rizky – Fitness Coach</p>
+      <img src="assets/trainer1.jpg" alt="Trainer">
+      <p>Shela – Fitness Coach</p>
     </div>
   </div>
 </section>
@@ -175,4 +175,3 @@
 
 </body>
 </html>
-
