--- a/reservation.html
+++ b/reservation.html
@@ -75,7 +75,7 @@
 <section id="support" class="contact">
   <h2>Contact Support</h2>
   <p>Email: support@smartfithub.id</p>
-  <p>Phone: 08xxxxxxxx</p>
+  <p>Phone: 088567489032</p>
   <p>Instagram: @smartfithub</p>
 </section>
 
@@ -106,3 +106,4 @@
 
 </body>
 </html>
+
