--- a/reservation.html
+++ b/reservation.html
@@ -8,102 +8,59 @@
 </head>
 <body>
 
-<!-- NAVBAR -->
-<nav class="navbar">
-  <h1>SMARTFIT HUB</h1>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="#reservation">Reservation</a></li>
-    <li><a href="#faq">FAQ</a></li>
-    <li><a href="#support">Support</a></li>
-  </ul>
-</nav>
+<section class="reservation-page">
+  <div class="reservation-container">
+    <h2>Reservasi Kelas / Trial Membership</h2>
 
-<!-- RESERVATION FORM -->
-<section id="reservation" class="contact">
-  <h2>Class & Trial Reservation</h2>
-  <p class="desc">
-    Silakan isi form di bawah ini untuk melakukan reservasi kelas atau trial membership.
-  </p>
+    <form>
+      <label>Nama Lengkap</label>
+      <input type="text" required>
 
-  <form class="reservation-form">
-    
-    <label>Nama Lengkap *</label>
-    <input type="text" required>
+      <label>Email</label>
+      <input type="email" required>
 
-    <label>Email *</label>
-    <input type="email" required>
+      <label>Nomor HP</label>
+      <input type="tel" required>
 
-    <label>Nomor HP *</label>
-    <input type="tel" required>
+      <label>Tanggal Reservasi</label>
+      <input type="date">
 
-    <label>Tanggal Reservasi</label>
-    <input type="date">
+      <label>Jam</label>
+      <input type="time">
 
-    <label>Jam</label>
-    <input type="time">
+      <label>Jenis Program</label>
+      <select>
+        <option>Yoga</option>
+        <option>HIIT</option>
+        <option>Personal Training</option>
+      </select>
 
-    <label>Jenis Program</label>
-    <select>
-      <option>Yoga</option>
-      <option>HIIT</option>
-      <option>Personal Training</option>
-      <option>Cardio Class</option>
-      <option>Trial Membership</option>
-    </select>
+      <label>Pilih Cabang</label>
+      <select>
+        <option>Jakarta</option>
+        <option>Bandung</option>
+      </select>
 
-    <label>Pilih Cabang</label>
-    <select>
-      <option>Jakarta</option>
-      <option>Bandung</option>
-    </select>
+      <label>Catatan Khusus</label>
+      <textarea rows="3"></textarea>
 
-    <label>Catatan Khusus</label>
-    <textarea rows="4" placeholder="Contoh: pemula, cedera ringan, dll"></textarea>
+      <div class="check-area">
+        <input type="checkbox" required>
+        <span>Saya mengkonfirmasi data yang diisi sudah benar</span>
+      </div>
 
-    <label class="checkbox">
-      <input type="checkbox" required>
-      Saya menyetujui data yang saya kirimkan
-    </label>
+      <button type="submit">Kirim Reservasi</button>
+    </form>
 
-    <button type="submit" class="btn">Kirim Reservasi</button>
+    <div class="faq">
+      <h3>FAQ</h3>
+      <p><strong>Apakah trial gratis?</strong><br>Ya, tersedia trial 1x gratis.</p>
+      <p><strong>Apakah bisa pilih trainer?</strong><br>Bisa, sesuai jadwal tersedia.</p>
+      <p><strong>Bagaimana konfirmasi reservasi?</strong><br>Kami akan menghubungi via WhatsApp.</p>
+    </div>
 
-  </form>
-</section>
-
-<!-- CONTACT SUPPORT -->
-<section id="support" class="contact">
-  <h2>Contact Support</h2>
-  <p>Email: support@smartfithub.id</p>
-  <p>Phone: 088567489032</p>
-  <p>Instagram: @smartfithub</p>
-</section>
-
-<!-- FAQ -->
-<section id="faq" class="programs">
-  <h2>FAQ</h2>
-
-  <div class="faq">
-    <h4>Apakah trial membership gratis?</h4>
-    <p>Ya, trial membership dapat digunakan satu kali secara gratis.</p>
-  </div>
-
-  <div class="faq">
-    <h4>Apakah bisa reschedule jadwal?</h4>
-    <p>Bisa, silakan hubungi contact support minimal H-1.</p>
-  </div>
-
-  <div class="faq">
-    <h4>Apakah pemula bisa ikut kelas?</h4>
-    <p>Tentu, semua kelas terbuka untuk pemula dengan pendampingan trainer.</p>
   </div>
 </section>
-
-<!-- FOOTER -->
-<footer>
-  <p>© 2026 SmartFit Hub – Train Smart, Live Strong</p>
-</footer>
 
 </body>
 </html>
-
